--- a/documents/Rapport/main.tex
+++ b/documents/Rapport/main.tex
@@ -107,6 +107,8 @@ pdfstartview={FitH}}					% ajuste la page à la largueur de l'écran
 
 \input{./notions.tex}
 
+\input{./existant.tex}
+
 \input{./contribution.tex}
 
 \input{./bilan.tex}
