Ajout section 'Existant'

--- a/documents/Rapport/archives.tex
+++ b/documents/Rapport/archives.tex
@@ -28,182 +28,11 @@ Nous allons prendre en exemple le cas non distributif le plus simple, $N_5$ pour
 
 \section{ORPAILLEUR}
 
-L'équipe ORPAILLEUR a poursuivi en ce sens \cite{cla2018} en proposant une méthode générale pour générer le graphe médian de façon systèmatique. Nous allons prendre en exemple le cas $N_5$ pour suivre les étapes de l'algorithme. Il faut garder à l'esprit de cette méthode vise à obtenir un treillis distributif aussi proche que possible du treillis original, le tout en garder l'ordre des objets. C'est-à-dire que la relation $o1 < o2$ restera vrai même après la transformation.
+L'équipe ORPAILLEUR a poursuivi en ce sens \cite{cla2018} en proposant une méthode générale pour générer le graphe médian de façon systèmatique. 
 
-\begin{figure}[H]
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tabular}{ l | c c c }
-			 & A & B & C \\
-			\hline
-			1 & x & & x \\
-			2 & & x & \\
-			3 & & & x \\
-		\end{tabular}
-	\end{center}
-	\end{minipage}
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tikzpicture}
-			\node [wnode, label=below:{bot}] (bot) at (0,0) {};
-			\node [bnode, label=left:{1, A}] (1) at (-1, 1) {};
-			\node [bnode, label=right:{2, B}] (2) at (1, 1) {};
-			\node [bnode, label=left:{3, C}] (3) at (-1, 2) {};
-			\node [wnode, label={top}] (top) at (0, 3) {};
-			
-			\path [line] (bot) -- (1);
-			\path [line] (bot) -- (2);
-			\path [line] (1) -- (3);
-			\path [line] (2) -- (top);
-			\path [line] (3) -- (top);
-		\end{tikzpicture}
-	\end{center}
-	\end{minipage}
-	\caption{Cas de $N_5$}
-\end{figure}
+\bigbreak
 
-Nous utilisons le contexte réduit de $N_5$. Nous allons créé un nouveau contexte à partir des $\wedge$-irreductibles. Le principe est de tous les parcourir et de crée un attribut pour chacun qui sera en correspondance avec tous les $\wedge$-irreductibles qui ne sont pas dans le filtre de l'attribut en cours.
-
-\begin{figure}[H]
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tabular}{ l | c }
-			 & m1\\
-			\hline
-			1 & \\
-			2 & x \\
-			3 & \\
-		\end{tabular}
-	\end{center}
-	\end{minipage}
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tikzpicture}
-			\node [wnode, label=below:{bot}] (bot) at (0,0) {};
-			\node [bnode, label=left:{1}] (1) at (-1, 1) {};
-			\node [bnode, label=right:{2}] (2) at (1, 1) {};
-			\node [bnode, label=left:{3}] (3) at (-1, 2) {};
-			\node [wnode, label={top}] (top) at (0, 3) {};
-			
-			\path [line] (bot) -- (1);
-			\path [line] (bot) -- (2);
-			\path [line] (1) -- (3);
-			\path [line] (2) -- (top);
-			\path [line] (3) -- (top);
-			
-			\draw [very thick, dotted] plot [smooth, tension=2] coordinates {(-2.5, 3.5) (-1, 0.5) (0.5, 3.5)};
-		\end{tikzpicture}
-	\end{center}
-	\end{minipage}
-	\caption{Étape 1}
-\end{figure}
-
-\begin{figure}[H]
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tabular}{ l | c c }
-			 & m1 & m2\\
-			\hline
-			1 & & x\\
-			2 & x & \\
-			3 & & x \\
-		\end{tabular}
-	\end{center}
-	\end{minipage}
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tikzpicture}
-			\node [wnode, label=below:{bot}] (bot) at (0,0) {};
-			\node [bnode, label=left:{1}] (1) at (-1, 1) {};
-			\node [bnode, label=right:{2}] (2) at (1, 1) {};
-			\node [bnode, label=left:{3}] (3) at (-1, 2) {};
-			\node [wnode, label={top}] (top) at (0, 3) {};
-			
-			\path [line] (bot) -- (1);
-			\path [line] (bot) -- (2);
-			\path [line] (1) -- (3);
-			\path [line] (2) -- (top);
-			\path [line] (3) -- (top);
-			
-			\draw [very thick, dotted] plot [smooth, tension=2] coordinates {(-0.5, 3.5) (1, 0.5) (2.5, 3.5)};
-		\end{tikzpicture}
-	\end{center}
-	\end{minipage}
-	\caption{Étape 2}
-\end{figure}
-
-\begin{figure}[H]
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tabular}{ l | c c c }
-			 & m1 & m2 & m3 \\
-			\hline
-			1 & & x & x \\
-			2 & x & & x\\
-			3 & & x & \\
-		\end{tabular}
-	\end{center}
-	\end{minipage}
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tikzpicture}
-			\node [wnode, label=below:{bot}] (bot) at (0,0) {};
-			\node [bnode, label=left:{1}] (1) at (-1, 1) {};
-			\node [bnode, label=right:{2}] (2) at (1, 1) {};
-			\node [bnode, label=left:{3}] (3) at (-1, 2) {};
-			\node [wnode, label={top}] (top) at (0, 3) {};
-			
-			\path [line] (bot) -- (1);
-			\path [line] (bot) -- (2);
-			\path [line] (1) -- (3);
-			\path [line] (2) -- (top);
-			\path [line] (3) -- (top);
-			
-			\draw [very thick, dotted] plot [smooth, tension=2] coordinates {(-2.5, 3.5) (-1, 1.5) (0.5, 3.5)};
-		\end{tikzpicture}
-	\end{center}
-	\end{minipage}
-	\caption{Étape 3}
-\end{figure}
-
-Uns fois ce nouveau contexte optenu, il suffit de tracer le treillis associé.
-
-\begin{figure}[H]
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tabular}{ l | c c c }
-			 & m1 & m2 & m3 \\
-			\hline
-			1 & & x & x \\
-			2 & x & & x\\
-			3 & & x & \\
-		\end{tabular}
-	\end{center}
-	\end{minipage}
-	\begin{minipage}[c]{0.5\textwidth}
-	\begin{center}
-		\begin{tikzpicture}
-			\node [wnode, label=below:{bot}] (bot) at (0,0) {};
-			\node [wnode, label=left:{1}] (1) at (-1, 1) {};
-			\node [wnode, label=right:{2, m1}] (2) at (1, 1) {};
-			\node [wnode, label=left:{3, m2}] (3) at (-1, 2) {};
-			\node [bnode, label=right:{m3}] (4) at (1, 2) {};
-			\node [wnode, label={top}] (top) at (0, 3) {};
-			
-			\path [line] (bot) -- (1);
-			\path [line] (bot) -- (2);
-			\path [line] (1) -- (3);
-			\path [line] (1) -- (4);
-			\path [line] (2) -- (4);
-			\path [line] (3) -- (top);
-			\path [line] (4) -- (top);
-		\end{tikzpicture}
-	\end{center}
-	\end{minipage}
-	\caption{$N_5$ après transformation}
-\end{figure}
-
-Nous obtenons ainsi un nouveau contexte pour un nouveau treillis distributif très proche du treillis de base. Mais cela reste que la première étape de la proposition de Utas Priss. Il faut à présent appliquer cette méthode dans le cas complet. Nous prendrons deux exemples, le premier fonctionne correctement et est basé sur l'exemple précédent ($N_5$) et le second va permettre de mettre en évidence le problème qui est à la source de mon travail. Nous appellerons cette méthode globale, la \guillemotleft{} méthode cla \guillemotright{}.
+ Mais cela reste que la première étape de la proposition de Utas Priss. Il faut à présent appliquer cette méthode dans le cas complet. Nous prendrons deux exemples, le premier fonctionne correctement et est basé sur l'exemple précédent ($N_5$) et le second va permettre de mettre en évidence le problème qui est à la source de mon travail. Nous appellerons cette méthode globale, la \guillemotleft{} méthode cla \guillemotright{}.
 
 \begin{figure}[H]
 	\begin{minipage}[c]{0.5\textwidth}
@@ -629,36 +458,4 @@ Tout d'abord nous avons le contexte quelconque (figure \ref{contexte_quelconque}
 		\label{contexte_réduit}
 	\end{center}
 	\end{minipage}
-\end{figure}
-
-\section{Algorithme de cla}
-
-\begin{figure}[H]
-\begin{algorithm}[H]
-	\DontPrintSemicolon
-	\caption{Construction de contexte de treillis distributif}
-
-	\KwData{Context réduit $C(J, M, \leq_{C})$}
-	\KwResult{Contexte réduit $C_d(J, M_d, I_d)$ de $(\mathcal{O}(J), \subseteq, \cap, \cup)$}
-
-	\Begin{
-		$M_d \leftarrow \emptyset$\;
-		$I_d \leftarrow \emptyset$\;
-		\ForEach{$j \in J$}{
-			$\uparrow j \leftarrow \emptyset$\;
-			\ForEach{$i \in J$}{
-				\If{$j' \subseteq i'$}{
-					$\uparrow j \leftarrow \uparrow j \cup i$\;
-				}
-			}
-			$M_d \leftarrow M_d \cup m_j$\;
-			$X \leftarrow J \setminus \uparrow j$\;
-			\ForEach{$x \in X$}{
-				$I_d \leftarrow I_d \cup (x, m_j)$\;
-			}
-		}
-	}
-\end{algorithm}
-\caption{Construction de contexte de treillis distributif}
-\label{algo_cla}
 \end{figure}
