--- a/documents/Rapport/contribution.tex
+++ b/documents/Rapport/contribution.tex
@@ -2,7 +2,7 @@
 
 \section{Implémentation}
 
-Mon stage s'est déroulé en deux phases. La première consiste à implémenter une méthode existante afin de la tester sur des cas de façon automatique. La seconde partie du stage a pour but d'améliorer la méthode précédente afin de prendre en compte le problème de fusion des n\oe uds. Avec en parallèle un renforcement de la compréhension du domaine à travers des articles sur l'existant et des discussions avec l'équipe.
+Le stage s'est déroulé en deux phases. La première consistait à implémenter la méthode détaillé dans la section précédente afin de la tester sur des cas de façon automatique. La seconde partie du stage avait pour but d'améliorer la méthode afin de prendre en compte le problème de fusion des n\oe uds. Avec en parallèle un renforcement de la compréhension du domaine à travers des articles sur l'existant et des discussions avec l'équipe.
 
 \bigbreak
 
