--- a/documents/Rapport/main.tex
+++ b/documents/Rapport/main.tex
@@ -115,7 +115,7 @@ pdfstartview={FitH}}					% ajuste la page à la largueur de l'écran
 
 \input{./annexes.tex}
 
-%\input{./archives.tex}
+\input{./archives.tex}
 
 \newpage
 
