--- a/documents/Rapport/motivations.tex
+++ b/documents/Rapport/motivations.tex
@@ -87,7 +87,7 @@ Ces arbres sont des représentations des données possédées et peuvent varier 
 
 \section{Outil : graphes médians}
 
-Le vivant et la multitude de caractéristiques de chaque espèce ne permet pas d'avoir un unique arbre parcimonieux pour représenter tous les accents possibles avec un jeu de données. Pour compenser cela la première solution est de donner tous les arbres possibles, solution qui est pour des raisons évidentes de place et de pertinence, pas viable. La seconde, proposée par Hans-Jürgen Bandelt dans \cite{MedianAlgebras}, consiste à encoder l'ensemble de ces arbres dans un graphe médian\todo{définition succincte des graphes médians}. Cette méthode permet ainsi d'avoir l'intégralité de ces arbres phylogénétiques parcimonieux en une unique représentation au lieu de devoir faire un arbre par information qu'on souhaite mettre en avant. Suivant ce principe nous obtenons la figure \ref{graphe_median_phylogenie} dans laquelle toutes les espèces, toujours sur les n\oe uds noirs, disposent des caractéristiques des n\oe uds qui lui sont au dessus et de celui où elles se trouvent. Dans ce jeu de données l'espèce \guillemotleft{} chat \guillemotright{} dispose des caractéristiques \guillemotleft{} nyctalope \guillemotright{} et \guillemotleft{} griffes \guillemotright{}. Ce graphe contient toutes les informations que les arbres précédents des figures \ref{arbre_phylogenie} et \ref{arbre_phylogenie_2} ainsi que les autres arbres qui peuvent être formé à partir de ce jeu de données, peuvent offrir.
+Le vivant et la multitude de caractéristiques de chaque espèce ne permet pas d'avoir un unique arbre parcimonieux pour représenter tous les accents possibles avec un jeu de données. Pour compenser cela la première solution est de donner tous les arbres possibles, solution qui est pour des raisons évidentes de place et de pertinence, pas viable. La seconde, proposée par Hans-Jürgen Bandelt dans \cite{MedianAlgebras}, consiste à encoder l'ensemble de ces arbres dans un graphe médian. Ce sont des graphes dans lesquels pour chaque triplet il n'y qu'un unique n\oe ud communs aux chemins les plus courts les reliant. Cette méthode permet ainsi d'avoir l'intégralité de ces arbres phylogénétiques parcimonieux en une unique représentation au lieu de devoir faire un arbre par information qu'on souhaite mettre en avant. Suivant ce principe nous obtenons la figure \ref{graphe_median_phylogenie} dans laquelle toutes les espèces, toujours sur les n\oe uds noirs, disposent des caractéristiques des n\oe uds qui lui sont au dessus et de celui où elles se trouvent. Dans ce jeu de données l'espèce \guillemotleft{} chat \guillemotright{} dispose des caractéristiques \guillemotleft{} nyctalope \guillemotright{} et \guillemotleft{} griffes \guillemotright{}. Ce graphe contient toutes les informations que les arbres précédents des figures \ref{arbre_phylogenie} et \ref{arbre_phylogenie_2} ainsi que les autres arbres qui peuvent être formé à partir de ce jeu de données, peuvent offrir.
 
 \begin{figure}[H]
 	\begin{center}
@@ -117,7 +117,7 @@ Le vivant et la multitude de caractéristiques de chaque espèce ne permet pas d
 
 \section{Approche : Analyse de Concepts Formels}
 
-Nous avons précédemment parlé de représenter grace à des arbres, des données sous la forme de matrices binares espèce/caractéristique. Cette façon de noter les données dans des matrices est centrale dans l'étude de la découverte de connaissances. Un domaine en découlant, l'analyse de concepts formels\footnote{FCA - Formal Concept Analysis : Analyse de Concepts Formels} se base sur ces matrices afin de créer des groupes d'individus en fontion de leur caractéristiques communes sous la forme de concept. Ils peuvent être ensuite ordonnés dans une représentation graphique, le treillis de concepts, très utilisée pour leurs classifications.
+Nous avons précédemment parlé de représenter grace à des arbres, des données sous la forme de matrices binares espèce/caractéristique. Cette façon de noter les données dans des matrices est centrale dans l'étude de la découverte de connaissances. Un domaine en découlant, l'analyse de concepts formels\footnote{FCA - Formal Concept Analysis : Analyse de Concepts Formels} se base sur ces matrices afin de créer des groupes d'individus en fontion de leur caractéristiques communes sous la forme de concept. Ils peuvent être ensuite ordonnés dans une représentation graphique, le treillis de concepts, très utilisée pour leurs classifications. Il se lit de bas en haut, chaque espèce dispose de toutes les caractéristiques des n\oe uds qui sont situés au dessus de son propre n\oe ud.
 
 \begin{figure}[H]
 	\begin{center}
